Refactor to Jpa and Dtos request and responses partial