@@ -1,13 +1,16 @@
 package com.ms_mascotas_eventos.services;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 import org.springframework.stereotype.Service;
 
-import com.ms_mascotas_eventos.Errors.RegionNotFoundException;
+import com.ms_mascotas_eventos.dtos.request.RegionRequest;
+import com.ms_mascotas_eventos.dtos.responses.RegionResponse;
+import com.ms_mascotas_eventos.entities.Region;
+import com.ms_mascotas_eventos.exceptions.EntityNotFoundException;
 import com.ms_mascotas_eventos.mappers.RegionMapper;
 import com.ms_mascotas_eventos.repositories.RegionRepository;
-import com.ms_mascotas_eventos.request.RegionDTO;
 import com.ms_mascotas_eventos.services.interfaces.IRegionService;
 
 import lombok.AllArgsConstructor;
@@ -20,33 +23,45 @@ public class RegionServiceImpl implements IRegionService{
     private final RegionRepository regionRepository;
 
     @Override
-    public List<RegionDTO> findAll() {
+    public List<RegionResponse> findAll() {
         log.info("Service Todas las Regiones");
-        return regionRepository.findAll()
-                                .stream()
-                                .map(region -> RegionMapper.toRegionDTO(region))
-                                .toList();
+        List<Region> regiones = regionRepository.findAll(); //busco todas las regiones
+        return regiones.stream()
+        .map(RegionMapper::toRegionResponse)
+        .collect(Collectors.toList()); // mapeo la lista de regiones a una lista de RegionResponse de respuestas dto
     }
 
     @Override
-    public RegionDTO findById(Long id) {
+    public RegionResponse findById(Long id) {
         log.info("Service Obtener por ID la region");
-       return RegionMapper.toRegionDTO(regionRepository.findById(id).orElseThrow(()-> new RegionNotFoundException(id)));
+       return regionRepository.findById(id) //busco la region por id
+        .map(RegionMapper::toRegionResponse) //mapeo la region a RegionResponse
+        .orElseThrow(() -> new EntityNotFoundException(Region.class, id)); //si no existe lanzo una excepcion
     }
 
     @Override
-    public RegionDTO save(RegionDTO region) {
-        return RegionMapper.toRegionDTO(regionRepository.save(RegionMapper.toRegion(region)));
+    public RegionResponse save(RegionRequest region) {
+        log.info("Service save region");
+        return RegionMapper.toRegionResponse(regionRepository.save(RegionMapper.toEntity(region))); //guardo la region
+    }
+    @Override
+    public RegionResponse update(Long id, RegionRequest region) {
+        log.info("Service update region");
+        Region regionUpdate = regionRepository.findById(id) //busco la region por id
+        .orElseThrow(() -> new EntityNotFoundException(Region.class, id)); //si no existe lanzo una excepcion
+        regionUpdate.setNombre(region.nombre()); //actualizo el nombre de la region
+        return RegionMapper.toRegionResponse(regionUpdate); //mapeo la region a RegionResponse
     }
 
     @Override
-    public RegionDTO update(Long id, RegionDTO region) {
-        return null;
-    }
-
-    @Override
-    public void delete(Long id) {
-
+    public boolean delete(Long id) {
+        log.info("Service delete por ID la region");
+        if (!regionRepository.existsById(id)) {
+            throw new EntityNotFoundException(Region.class, id); //si no existe lanzo una excepcion
+        }
+        
+        regionRepository.deleteById(id);
+        return true;
     }
 
 }
